@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,10 +25,10 @@
 package jdk.graal.compiler.hotspot;
 
 import static jdk.vm.ci.common.InitTimer.timer;
-import static jdk.vm.ci.services.Services.IS_BUILDING_NATIVE_IMAGE;
-import static jdk.vm.ci.services.Services.IS_IN_NATIVE_IMAGE;
 
 import java.io.PrintStream;
+
+import jdk.graal.compiler.core.common.LibGraalSupport;
 
 import jdk.graal.compiler.api.runtime.GraalRuntime;
 import jdk.graal.compiler.debug.MethodFilter;
@@ -46,7 +46,6 @@ import jdk.vm.ci.hotspot.HotSpotVMConfigAccess;
 import jdk.vm.ci.meta.Signature;
 import jdk.vm.ci.runtime.JVMCICompilerFactory;
 import jdk.vm.ci.runtime.JVMCIRuntime;
-import jdk.vm.ci.services.Services;
 
 public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
 
@@ -94,11 +93,11 @@ public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
 
     @Override
     public void onSelection() {
-        if (Services.IS_IN_NATIVE_IMAGE) {
+        if (LibGraalSupport.inLibGraalRuntime()) {
             // When instantiating a JVMCI runtime in the libgraal heap there's no
             // point in delaying HotSpotGraalRuntime initialization as it
             // is very fast (it's compiled and does no class loading) and will
-            // usually be done immediately after this call anyway (i.e. in a
+            // usually happen immediately after this call anyway (i.e. in a
             // Graal-as-JIT configuration).
             initialize();
             initialized = true;
@@ -122,14 +121,10 @@ public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
         }
         initializeGraalCompilePolicyFields(options);
         isGraalPredicate = compileGraalWithC1Only ? new IsGraalPredicate() : null;
-        if (IS_BUILDING_NATIVE_IMAGE) {
-            // Triggers initialization of all option descriptors
-            Options.CompileGraalWithC1Only.getName();
-        }
     }
 
     private static void initializeGraalCompilePolicyFields(OptionValues options) {
-        compileGraalWithC1Only = Options.CompileGraalWithC1Only.getValue(options) && !IS_IN_NATIVE_IMAGE;
+        compileGraalWithC1Only = Options.CompileGraalWithC1Only.getValue(options) && !LibGraalSupport.inLibGraalRuntime();
         String optionValue = Options.GraalCompileOnly.getValue(options);
         if (optionValue != null) {
             MethodFilter filter = MethodFilter.parse(optionValue);
@@ -169,8 +164,9 @@ public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
 
     @Override
     public HotSpotGraalCompiler createCompiler(JVMCIRuntime runtime) {
-        ensureInitialized();
         HotSpotJVMCIRuntime hsRuntime = (HotSpotJVMCIRuntime) runtime;
+        checkUnsafeAccess(hsRuntime);
+        ensureInitialized();
         if (optionsFailure != null) {
             System.err.printf("Error parsing Graal options: %s%nError: A fatal exception has occurred. Program will exit.%n", optionsFailure.getMessage());
             HotSpotGraalServices.exit(1, hsRuntime);
@@ -196,6 +192,28 @@ public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
     }
 
     /**
+     * Exit the VM now if {@code jdk.internal.misc.Unsafe} is not accessible.
+     */
+    private void checkUnsafeAccess(HotSpotJVMCIRuntime hsRuntime) {
+        if (LibGraalSupport.inLibGraalRuntime()) {
+            // Access checks were performed when building libgraal.
+            return;
+        }
+        try {
+            jdk.internal.misc.Unsafe.getUnsafe();
+        } catch (IllegalAccessError e) {
+            Module module = getClass().getModule();
+            String targets = module.getName();
+            String ee = "com.oracle.graal.graal_enterprise";
+            if (module.getDescriptor().exports().stream().anyMatch(export -> export.targets().contains(ee))) {
+                targets += "," + ee;
+            }
+            System.err.printf("Error: jargraal requires --add-exports=java.base/jdk.internal.misc=%s to be specified to the launcher.%n", targets);
+            HotSpotGraalServices.exit(1, hsRuntime);
+        }
+    }
+
+    /**
      * Creates a new {@link HotSpotGraalRuntime} object and a new {@link HotSpotGraalCompiler} and
      * returns the latter.
      *
@@ -214,7 +232,7 @@ public final class HotSpotGraalCompilerFactory implements JVMCICompilerFactory {
         }
     }
 
-    static boolean shouldExclude(HotSpotResolvedJavaMethod method) {
+    public static boolean shouldExclude(HotSpotResolvedJavaMethod method) {
         if (graalCompileOnlyFilter != null) {
             String javaClassName = method.getDeclaringClass().toJavaName();
             String name = method.getName();
