@@ -25,21 +25,21 @@
 
 package com.oracle.svm.core.jdk.resources.CompressedGlobTrie;
 
-import static com.oracle.svm.core.jdk.resources.CompressedGlobTrie.GlobTrieNode.LEVEL_IDENTIFIER;
-import static com.oracle.svm.core.jdk.resources.CompressedGlobTrie.GlobTrieNode.STAR;
-import static com.oracle.svm.core.jdk.resources.CompressedGlobTrie.GlobTrieNode.STAR_STAR;
+import static com.oracle.svm.util.GlobUtils.LEVEL_IDENTIFIER;
+import static com.oracle.svm.util.GlobUtils.STAR;
+import static com.oracle.svm.util.GlobUtils.STAR_STAR;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.regex.Pattern;
 
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 
 import com.oracle.svm.core.util.UserError;
+import com.oracle.svm.util.GlobUtils;
 import com.oracle.svm.util.StringUtil;
 
 /**
@@ -48,8 +48,8 @@ import com.oracle.svm.util.StringUtil;
  *
  * The structure can be created using {@link CompressedGlobTrieBuilder#build(List)} where list
  * parameter represents list of glob patterns given in any order. At the very beginning, all given
- * globs will be validated using {@link CompressedGlobTrieBuilder#validatePattern(String)}. If all
- * globs were correct, they will be classified (with
+ * globs will be validated using {@link GlobUtils#validatePattern(String)}. If all globs were
+ * correct, they will be classified (with
  * {@link CompressedGlobTrieBuilder#classifyPatterns(List, List, List, List)}) and sorted (using
  * {@link CompressedGlobTrieBuilder#comparePatterns(GlobWithInfo, GlobWithInfo)} as the comparator
  * function). This preprocessing phase allows incremental structure build, going from the most
@@ -57,27 +57,27 @@ import com.oracle.svm.util.StringUtil;
  * structure will first check if the given glob can be matched with some glob that already exists in
  * the structure (NOTE: possibly more than one glob pattern from the structure can match the new
  * pattern). When that is not the case, a new pattern will be added using
- * {@link CompressedGlobTrieBuilder#addNewBranch(GlobTrieNode, List, int, String)}. This function
- * will attempt identical matching (where wildcards have no special semantics) to move as deep in
- * the structure as possible. Once it cannot proceed with the existing branches, the function will
- * append rest of the pattern as the new branch. At the end, each node (not necessarily leaf) that
- * represents end of the glob, can store additional content.
+ * {@link CompressedGlobTrieBuilder#addNewBranch}. This function will attempt identical matching
+ * (where wildcards have no special semantics) to move as deep in the structure as possible. Once it
+ * cannot proceed with the existing branches, the function will append rest of the pattern as the
+ * new branch. At the end, each node (not necessarily leaf) that represents end of the glob, can
+ * store additional content.
  *
  * When created, the structure can be used to either check if the given text can be matched with
  * globs from the structure (using {@link #match(GlobTrieNode, String)}) or to fetch all additional
  * content from globs that can match given text (using
- * {@link #getAdditionalContentIfMatched(GlobTrieNode, String)}).
+ * {@link #getHostedOnlyContentIfMatched(GlobTrieNode, String)}).
  */
 public class CompressedGlobTrie {
 
-    public record GlobWithInfo(String pattern, String additionalContent) {
+    public record GlobWithInfo<C>(String pattern, C additionalContent) {
     }
 
     /*
      * Data transfer object that points to the next matched child instance and its index in the
      * pattern parts list
      */
-    private record MatchedNode(GlobTrieNode child, int lastMatchedChildIndex) {
+    private record MatchedNode<C>(GlobTrieNode<C> child, int lastMatchedChildIndex) {
     }
 
     /*
@@ -93,17 +93,17 @@ public class CompressedGlobTrie {
     }
 
     @Platforms(Platform.HOSTED_ONLY.class)
-    public static class CompressedGlobTrieBuilder {
+    public static class CompressedGlobTrieBuilder<C> {
         /**
          * Builds an immutable CompressedGlobTrie structure from glob patterns given in any order
          * with possibly additional context.
          */
-        public static GlobTrieNode build(List<GlobWithInfo> patterns) {
-            GlobTrieNode root = new GlobTrieNode();
+        public static <C> GlobTrieNode<C> build(List<GlobWithInfo<C>> patterns) {
+            GlobTrieNode<C> root = new GlobTrieNode<>();
             /* classify patterns in groups */
-            List<GlobWithInfo> doubleStarPatterns = new ArrayList<>();
-            List<GlobWithInfo> starPatterns = new ArrayList<>();
-            List<GlobWithInfo> noStarPatterns = new ArrayList<>();
+            List<GlobWithInfo<C>> doubleStarPatterns = new ArrayList<>();
+            List<GlobWithInfo<C>> starPatterns = new ArrayList<>();
+            List<GlobWithInfo<C>> noStarPatterns = new ArrayList<>();
 
             List<String> invalidPatterns = classifyPatterns(patterns, doubleStarPatterns, starPatterns, noStarPatterns);
             if (!invalidPatterns.isEmpty()) {
@@ -140,24 +140,24 @@ public class CompressedGlobTrie {
             return unescapedPattern;
         }
 
-        private static void addPattern(GlobTrieNode root, GlobWithInfo pattern) {
+        private static <C> void addPattern(GlobTrieNode<C> root, GlobWithInfo<C> pattern) {
             String unescapedPattern = unescapePossibleWildcards(pattern.pattern());
-            List<GlobTrieNode> parts = getPatternParts(unescapedPattern);
+            List<GlobTrieNode<C>> parts = getPatternParts(unescapedPattern);
 
             /*
              * if this pattern can be matched with some other existing pattern, we should just
              * update content of leafs
              */
-            List<GlobTrieNode> reachableNodes = new ArrayList<>();
+            List<GlobTrieNode<C>> reachableNodes = new ArrayList<>();
             getAllPatterns(root, parts, 0, reachableNodes);
             if (!reachableNodes.isEmpty()) {
                 /* new pattern is a part of some existing patterns in the existing Trie */
-                for (GlobTrieNode node : reachableNodes) {
+                for (GlobTrieNode<C> node : reachableNodes) {
                     /*
                      * Both pattern and additionalContent are already present in the trie, so we can
                      * skip this pattern
                      */
-                    if (node.getAdditionalContent().stream().anyMatch(c -> c.equals(pattern.additionalContent()))) {
+                    if (node.getHostedOnlyContent().stream().anyMatch(c -> c.equals(pattern.additionalContent()))) {
                         return;
                     }
                 }
@@ -166,14 +166,14 @@ public class CompressedGlobTrie {
             addPattern(root, parts, 0, pattern.additionalContent());
         }
 
-        private static void addPattern(GlobTrieNode root, List<GlobTrieNode> parts, int i, String additionalInfo) {
+        private static <C> void addPattern(GlobTrieNode<C> root, List<GlobTrieNode<C>> parts, int i, C additionalInfo) {
             if (patternReachedEnd(i, parts)) {
                 root.setLeaf();
-                root.addAdditionalContent(additionalInfo);
+                root.addHostedOnlyContent(additionalInfo);
                 return;
             }
 
-            GlobTrieNode nextPart = parts.get(i);
+            GlobTrieNode<C> nextPart = parts.get(i);
             boolean canProceed = simplePatternMatch(root, nextPart);
             if (canProceed) {
                 /* we had progress, try to match rest of the pattern */
@@ -188,16 +188,16 @@ public class CompressedGlobTrie {
             addNewBranch(root, parts, i, additionalInfo);
         }
 
-        private static void addNewBranch(GlobTrieNode root, List<GlobTrieNode> parts, int i, String additionalInfo) {
+        private static <C> void addNewBranch(GlobTrieNode<C> root, List<GlobTrieNode<C>> parts, int i, C additionalInfo) {
             /* sanity check */
             if (parts.isEmpty() || i >= parts.size()) {
                 return;
             }
 
-            GlobTrieNode newNode = null;
+            GlobTrieNode<C> newNode = null;
             /* we matched pattern parts until i-th pattern part, so just add rest */
             for (int j = i; j < parts.size(); j++) {
-                GlobTrieNode part = parts.get(j);
+                GlobTrieNode<C> part = parts.get(j);
                 if (newNode == null) {
                     newNode = root.addChild(part.getContent(), part);
                     continue;
@@ -208,17 +208,17 @@ public class CompressedGlobTrie {
 
             /* mark end of pattern and populate additional info */
             newNode.setLeaf();
-            newNode.addAdditionalContent(additionalInfo);
+            newNode.addHostedOnlyContent(additionalInfo);
         }
 
-        private static List<String> classifyPatterns(List<GlobWithInfo> patterns,
-                        List<GlobWithInfo> doubleStar,
-                        List<GlobWithInfo> singleStar,
-                        List<GlobWithInfo> noStar) {
+        private static <C> List<String> classifyPatterns(List<GlobWithInfo<C>> patterns,
+                        List<GlobWithInfo<C>> doubleStar,
+                        List<GlobWithInfo<C>> singleStar,
+                        List<GlobWithInfo<C>> noStar) {
             List<String> invalidPatterns = new ArrayList<>();
-            for (GlobWithInfo patternWithInfo : patterns) {
+            for (GlobWithInfo<C> patternWithInfo : patterns) {
                 /* validate patterns */
-                String error = validatePattern(patternWithInfo.pattern());
+                String error = GlobUtils.validatePattern(patternWithInfo.pattern());
                 if (!error.isEmpty()) {
                     invalidPatterns.add(error);
                     continue;
@@ -237,7 +237,7 @@ public class CompressedGlobTrie {
             return invalidPatterns;
         }
 
-        private static int comparePatterns(GlobWithInfo n1, GlobWithInfo n2) {
+        private static int comparePatterns(GlobWithInfo<?> n1, GlobWithInfo<?> n2) {
             String s1 = n1.pattern();
             String s2 = n2.pattern();
 
@@ -343,7 +343,7 @@ public class CompressedGlobTrie {
     /**
      * Trims the Trie and makes it unmodifiable.
      */
-    public static void finalize(GlobTrieNode root) {
+    public static <C> void finalize(GlobTrieNode<C> root) {
         root.trim();
     }
 
@@ -351,26 +351,26 @@ public class CompressedGlobTrie {
      * Returns list of information from all glob patterns that could match given text.
      */
     @Platforms(Platform.HOSTED_ONLY.class)
-    public static List<String> getAdditionalContentIfMatched(GlobTrieNode root, String text) {
-        List<GlobTrieNode> matchedNodes = new ArrayList<>();
+    public static <C> List<C> getHostedOnlyContentIfMatched(GlobTrieNode<C> root, String text) {
+        List<GlobTrieNode<C>> matchedNodes = new ArrayList<>();
         getAllPatterns(root, getPatternParts(text), 0, matchedNodes);
         if (matchedNodes.isEmpty()) {
             /* text cannot be matched */
             return null;
         }
 
-        List<String> additionalContexts = new ArrayList<>();
-        matchedNodes.forEach(node -> additionalContexts.addAll(node.getAdditionalContent()));
+        List<C> additionalContexts = new ArrayList<>();
+        matchedNodes.forEach(node -> additionalContexts.addAll(node.getHostedOnlyContent()));
         return additionalContexts;
     }
 
     /**
      * Returns whether given text can be matched with any glob pattern in the Trie or not.
      */
-    public static boolean match(GlobTrieNode root, String text) {
+    public static <C> boolean match(GlobTrieNode<C> root, String text) {
         /* in this case text is a plain text without special meanings, so stars must be escaped */
         String escapedText = escapeAllStars(text);
-        List<GlobTrieNode> tmp = new ArrayList<>();
+        List<GlobTrieNode<C>> tmp = new ArrayList<>();
         getAllPatterns(root, getPatternParts(escapedText), 0, tmp);
         return !tmp.isEmpty();
     }
@@ -379,133 +379,33 @@ public class CompressedGlobTrie {
         return text.replace("*", "\\*");
     }
 
-    private static final Pattern threeConsecutiveStarsRegex = Pattern.compile(".*[*]{3,}.*");
-    private static final Pattern emptyLevelsRegex = Pattern.compile(".*/{2,}.*");
-
-    public static String validatePattern(String pattern) {
-        StringBuilder sb = new StringBuilder();
-
-        if (pattern.isEmpty()) {
-            sb.append("Pattern ").append(pattern).append(" : Pattern cannot be empty. ");
-            return sb.toString();
-        }
-
-        // check if pattern contains more than 2 consecutive characters. Example: a/***/b
-        if (threeConsecutiveStarsRegex.matcher(pattern).matches()) {
-            sb.append("Pattern contains more than two consecutive * characters. ");
-        }
-
-        /* check if pattern contains empty levels. Example: a//b */
-        if (emptyLevelsRegex.matcher(pattern).matches()) {
-            sb.append("Pattern contains empty levels. ");
-        }
-
-        /* check unnecessary ** repetition */
-        if (pattern.contains("**/**")) {
-            sb.append("Pattern contains invalid sequence **/**. Valid pattern should have ** followed by something other than **. ");
-        }
-
-        /* check if there are unescaped wildcards */
-        boolean escapeMode = false;
-        for (int i = 0; i < pattern.length(); i++) {
-            char current = pattern.charAt(i);
-            if (GlobUtils.ALWAYS_ESCAPED_GLOB_WILDCARDS.contains(current) && !escapeMode) {
-                sb.append("Pattern contains unescaped character ").append(current).append(". ");
-            }
-
-            escapeMode = current == '\\';
-        }
-
-        // check if pattern contains ** without previous Literal parent. Example: */**/... or **/...
-        List<GlobTrieNode> patternParts = getPatternParts(pattern);
-        for (GlobTrieNode part : patternParts) {
-            if (part instanceof LiteralNode) {
-                break;
-            }
-
-            if (part instanceof DoubleStarNode) {
-                sb.append("Pattern contains ** without previous literal. " +
-                                "This pattern is too generic and therefore can match many resources. " +
-                                "Please make the pattern more specific by adding non-generic level before ** level.");
-            }
-        }
-
-        if (!sb.isEmpty()) {
-            sb.insert(0, "Pattern " + pattern + " : ");
-        }
-
-        return sb.toString();
-    }
-
     /**
      * Returns list of glob pattern parts that will represent nodes in final Trie. This function is
      * used as a helper function in tests as well, and therefore must remain public.
      */
-    public static List<GlobTrieNode> getPatternParts(String glob) {
+    public static <C> List<GlobTrieNode<C>> getPatternParts(String glob) {
         String pattern = !glob.endsWith("/") ? glob : glob.substring(0, glob.length() - 1);
-        List<GlobTrieNode> parts = new ArrayList<>();
-        /* we are splitting patterns on levels */
-        List<String> levels = Arrays.stream(pattern.split(LEVEL_IDENTIFIER)).toList();
-        for (String level : levels) {
-            if (level.equals(STAR_STAR)) {
-                DoubleStarNode tmp = new DoubleStarNode();
-                tmp.setNewLevel();
-                parts.add(tmp);
-                continue;
+        List<List<GlobUtils.GlobToken>> tokens = GlobUtils.tokenize(pattern);
+        List<GlobTrieNode<C>> parts = new ArrayList<>(tokens.size());
+
+        for (List<GlobUtils.GlobToken> levelTokens : tokens) {
+            List<GlobTrieNode<C>> thisLevelParts = new ArrayList<>(levelTokens.size());
+            for (GlobUtils.GlobToken token : levelTokens) {
+                thisLevelParts.add(switch (token.kind()) {
+                    case STAR_STAR -> new DoubleStarNode<>();
+                    case STAR -> new StarTrieNode<>(true);
+                    case LITERAL_STAR -> new StarTrieNode<>(token.value());
+                    case LITERAL -> new LiteralNode<>(token.value());
+                });
             }
-
-            if (level.equals(STAR)) {
-                /* special case when * is alone on one level */
-                StarTrieNode tmp = new StarTrieNode(true);
-                tmp.setNewLevel();
-                parts.add(tmp);
-                continue;
-            }
-
-            /* adding a*bc and a*dc patterns will produce: a* -> bc a* -> dc */
-            int s = level.indexOf(STAR.charAt(0));
-            if (s != -1) {
-                /*
-                 * this level contains at least one star, but maybe it has more. E.g.:
-                 * something/a*b*c*d/else
-                 */
-
-                List<GlobTrieNode> thisLevelParts = new ArrayList<>();
-                StringBuilder currentPart = new StringBuilder();
-                StarCollectorMode currentMode = StarCollectorMode.NORMAL;
-                for (char c : level.toCharArray()) {
-                    currentPart.append(c);
-                    if (c == STAR.charAt(0) && currentMode == StarCollectorMode.NORMAL) {
-                        thisLevelParts.add(new StarTrieNode(currentPart.toString()));
-                        currentPart.setLength(0);
-                    }
-
-                    currentMode = c == '\\' ? StarCollectorMode.ESCAPE : StarCollectorMode.NORMAL;
-                }
-
-                if (!currentPart.isEmpty()) {
-                    /* this level ends with some literal node */
-                    thisLevelParts.add(new LiteralNode(currentPart.toString()));
-                }
-                thisLevelParts.get(0).setNewLevel();
-                parts.addAll(thisLevelParts);
-                continue;
-            }
-
-            LiteralNode tmp = new LiteralNode(level);
-            tmp.setNewLevel();
-            parts.add(tmp);
+            thisLevelParts.getFirst().setNewLevel();
+            parts.addAll(thisLevelParts);
         }
 
         return parts;
     }
 
-    private enum StarCollectorMode {
-        NORMAL,
-        ESCAPE
-    }
-
-    private static void getAllPatterns(GlobTrieNode node, List<GlobTrieNode> parts, int i, List<GlobTrieNode> matches) {
+    private static <C> void getAllPatterns(GlobTrieNode<C> node, List<GlobTrieNode<C>> parts, int i, List<GlobTrieNode<C>> matches) {
         if (patternReachedEnd(i, parts)) {
             if (node.isLeaf()) {
                 matches.add(node);
@@ -515,9 +415,9 @@ public class CompressedGlobTrie {
         }
 
         /* get ** successors that could extend check */
-        DoubleStarNode doubleStar = node.getDoubleStarNode();
+        DoubleStarNode<C> doubleStar = node.getDoubleStarNode();
         if (doubleStar != null) {
-            for (MatchedNode child : getAllAvailablePaths(doubleStar, parts, i)) {
+            for (MatchedNode<C> child : getAllAvailablePaths(doubleStar, parts, i)) {
                 getAllPatterns(child.child(), parts, child.lastMatchedChildIndex() + 1, matches);
             }
         }
@@ -525,12 +425,12 @@ public class CompressedGlobTrie {
         /* get * nodes that could match next level */
         SquashedParts sp = getThisLevel(parts, i);
         for (var child : node.getChildrenWithStar()) {
-            for (GlobTrieNode c : matchOneLevel(child, sp.squashedPart())) {
+            for (GlobTrieNode<C> c : matchOneLevel(child, sp.squashedPart())) {
                 getAllPatterns(c, parts, i + sp.numberOfSquashedParts() + 1, matches);
             }
         }
 
-        GlobTrieNode part = parts.get(i);
+        GlobTrieNode<C> part = parts.get(i);
         if (part instanceof StarTrieNode || part instanceof DoubleStarNode) {
             /*
              * next part is not simple text, and we didn't match it before, so we can't proceed
@@ -542,7 +442,7 @@ public class CompressedGlobTrie {
         }
 
         /* we don't have wildcards anymore, so try simple match */
-        GlobTrieNode child = node.getChild(part.getContent());
+        GlobTrieNode<C> child = node.getChild(part.getContent());
         if (child == null) {
             return;
         }
@@ -551,11 +451,11 @@ public class CompressedGlobTrie {
         getAllPatterns(child, parts, i + 1, matches);
     }
 
-    private static List<MatchedNode> getAllAvailablePaths(DoubleStarNode node, List<GlobTrieNode> parts, int i) {
-        List<MatchedNode> successors = new ArrayList<>();
+    private static <C> List<MatchedNode<C>> getAllAvailablePaths(DoubleStarNode<C> node, List<GlobTrieNode<C>> parts, int i) {
+        List<MatchedNode<C>> successors = new ArrayList<>();
         /* maybe ** is leaf, so we should cover this pattern */
         if (node.isLeaf()) {
-            return List.of(new MatchedNode(node, parts.size()));
+            return List.of(new MatchedNode<>(node, parts.size()));
         }
 
         /* checks if we skip some part (on index j) can we match with some child of node */
@@ -563,16 +463,16 @@ public class CompressedGlobTrie {
             /* in case next part contains many stars, squash them into one node */
             SquashedParts sp = getThisLevel(parts, j);
             /* checks if any child of current node can match next part */
-            for (StarTrieNode child : node.getChildrenWithStar()) {
+            for (StarTrieNode<C> child : node.getChildrenWithStar()) {
                 int finalJ = j;
                 /* we can match next level with more than one pattern */
                 successors.addAll(matchOneLevel(child, sp.squashedPart())
                                 .stream()
-                                .map(c -> new MatchedNode(c, finalJ + sp.numberOfSquashedParts()))
+                                .map(c -> new MatchedNode<>(c, finalJ + sp.numberOfSquashedParts()))
                                 .toList());
             }
 
-            GlobTrieNode part = parts.get(j);
+            GlobTrieNode<C> part = parts.get(j);
             if (part instanceof StarTrieNode) {
                 /*
                  * we are only checking trivial parts because we processed star nodes, and we don't
@@ -581,13 +481,13 @@ public class CompressedGlobTrie {
                 continue;
             }
 
-            GlobTrieNode child = node.getChild(part.getContent());
+            GlobTrieNode<C> child = node.getChild(part.getContent());
             /*
              * we are checking only parts that begins new level because in pattern a*b*c, last c is
              * LiteralNode, but it is a part of complex StarTrieNode
              */
             if (part.isNewLevel() && child != null) {
-                successors.add(new MatchedNode(child, j));
+                successors.add(new MatchedNode<>(child, j));
             }
         }
 
@@ -595,20 +495,20 @@ public class CompressedGlobTrie {
     }
 
     private static int getIndexOfFirstUnescapedStar(String level) {
-        StarCollectorMode currentMode = StarCollectorMode.NORMAL;
+        boolean escaped = false;
         for (int i = 0; i < level.length(); i++) {
             char c = level.charAt(i);
-            if (c == STAR.charAt(0) && currentMode == StarCollectorMode.NORMAL) {
+            if (c == STAR.charAt(0) && !escaped) {
                 return i;
             }
 
-            currentMode = c == '\\' ? StarCollectorMode.ESCAPE : StarCollectorMode.NORMAL;
+            escaped = c == '\\';
         }
 
         return -1;
     }
 
-    private static List<GlobTrieNode> matchOneLevel(StarTrieNode node, String wholeLevel) {
+    private static <C> List<GlobTrieNode<C>> matchOneLevel(StarTrieNode<C> node, String wholeLevel) {
         if (node.isMatchingWholeLevel()) {
             return List.of(node);
         }
@@ -632,8 +532,8 @@ public class CompressedGlobTrie {
             return List.of(node);
         }
 
-        List<GlobTrieNode> potentialChildren = new ArrayList<>();
-        for (LiteralNode child : node.getChildrenWithLiteral()) {
+        List<GlobTrieNode<C>> potentialChildren = new ArrayList<>();
+        for (LiteralNode<C> child : node.getChildrenWithLiteral()) {
             if (child.isNewLevel()) {
                 // we won't try matching with this child since it is not on same level
                 // example: a*/c => c is a child of * but it is on the next level, so it can't be
@@ -654,7 +554,7 @@ public class CompressedGlobTrie {
         /*
          * we need to go in deeper recursion with children that also contains star (like: a* -> b*)
          */
-        for (StarTrieNode child : node.getChildrenWithStar()) {
+        for (StarTrieNode<C> child : node.getChildrenWithStar()) {
             if (child.isNewLevel()) {
                 // we won't try matching with this child since it is not on same level
                 // example: a*/c* => c* is a child of a* but it is on the next level, so it can't be
@@ -663,7 +563,7 @@ public class CompressedGlobTrie {
             }
 
             /* if there is a repetition of certain * node we must check paths through all of them */
-            StarTrieNode tmpChild = child;
+            StarTrieNode<C> tmpChild = child;
             while (true) {
                 String childContent = tmpChild.getContent();
                 String childPrefix = childContent.substring(0, childContent.indexOf(STAR.charAt(0)));
@@ -673,21 +573,21 @@ public class CompressedGlobTrie {
                 }
 
                 /* check if current node has child with same content on same level */
-                GlobTrieNode potentialChild = tmpChild.getChildFromSameLevel(tmpChild.getContent());
+                GlobTrieNode<C> potentialChild = tmpChild.getChildFromSameLevel(tmpChild.getContent());
                 if (potentialChild == null) {
                     /* we don't have more repeated star nodes so just quit the loop */
                     break;
                 }
 
                 /* move to next node that is repeated */
-                tmpChild = (StarTrieNode) potentialChild;
+                tmpChild = (StarTrieNode<C>) potentialChild;
             }
         }
 
         return potentialChildren;
     }
 
-    private static boolean simplePatternMatch(GlobTrieNode root, GlobTrieNode part) {
+    private static <C> boolean simplePatternMatch(GlobTrieNode<C> root, GlobTrieNode<C> part) {
         if (root instanceof StarTrieNode || root instanceof DoubleStarNode || part instanceof StarTrieNode || part instanceof DoubleStarNode) {
             return false;
         }
@@ -695,12 +595,12 @@ public class CompressedGlobTrie {
         return root.getChild(part.getContent()) != null;
     }
 
-    private static SquashedParts getThisLevel(List<GlobTrieNode> parts, int begin) {
+    private static <C> SquashedParts getThisLevel(List<GlobTrieNode<C>> parts, int begin) {
         StringBuilder sb = new StringBuilder(parts.get(begin).getContent());
         int numberOfSquashedParts = 0;
         /* collect all parts until we hit beginning of the new level */
         for (int i = begin + 1; i < parts.size(); i++) {
-            GlobTrieNode nextPart = parts.get(i);
+            GlobTrieNode<C> nextPart = parts.get(i);
             if (nextPart.isNewLevel()) {
                 break;
             }
@@ -712,20 +612,20 @@ public class CompressedGlobTrie {
         return new SquashedParts(sb.toString(), numberOfSquashedParts);
     }
 
-    private static boolean patternReachedEnd(int index, List<GlobTrieNode> parts) {
+    private static <C> boolean patternReachedEnd(int index, List<GlobTrieNode<C>> parts) {
         return index >= parts.size();
     }
 
-    public static void removeNodes(GlobTrieNode head, Predicate<String> shouldRemove) {
-        List<String> contentToRemove = head.getAdditionalContent().stream().filter(shouldRemove).toList();
-        head.removeAdditionalContent(contentToRemove);
+    public static <C> void removeNodes(GlobTrieNode<C> head, Predicate<C> shouldRemove) {
+        List<C> contentToRemove = head.getHostedOnlyContent().stream().filter(shouldRemove).toList();
+        head.removeHostedOnlyContent(contentToRemove);
 
-        List<GlobTrieNode> childrenToRemove = new ArrayList<>();
-        for (GlobTrieNode child : head.getChildren()) {
+        List<GlobTrieNode<C>> childrenToRemove = new ArrayList<>();
+        for (GlobTrieNode<C> child : head.getChildren()) {
             removeNodes(child, shouldRemove);
 
             /* leaf without additional content should be removed */
-            if (child.isLeaf() && child.getAdditionalContent().isEmpty()) {
+            if (child.isLeaf() && child.getHostedOnlyContent().isEmpty()) {
                 if (child.getChildren().isEmpty()) {
                     /* if it is the last node remove it physically */
                     childrenToRemove.add(child);
